# power-metrics-lib

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: activities.md  index.md  reference.md  workouts.md
notebooks/: power_metrics.ipynb
power_metrics_lib/: __init__.py
power_metrics_lib/calculate_metrics/: calculate_metrics.py
power_metrics_lib/fit_file_parser/: fit_file_parser.py
src/power_metrics_lib/: __init__.py
src/power_metrics_lib/calculate_metrics/: __init__.py  calculate_metrics.py
src/power_metrics_lib/file_parsers/: __init__.py  activity_file_parser.py  fit_file_parser.py  workout_file_parser.py  zwo_file_parser.py
src/power_metrics_lib/fit_file_parser/: __init__.py
src/power_metrics_lib/models/: __init__.py  activity.py  athlete.py  metrics.py  workout.py
src/power_metrics_lib/transformers/: __init__.py  workout_to_activity.py
tests/: __init__.py  test_activity.py  test_activity_file_parser.py  test_athlete.py  test_calculate_metrics.py  test_file_parser.py  test_fit_file_parser.py  test_metrics.py  test_transform_workout_to_activity.py  test_workout.py  test_workout_file_parser.py
tests/files/: file.fit  mosaic.zwo  zwift_workout.fit  zwift_workout.zwo  zwift_workout_unknown_block_type.zwo  zwift_workout_unknown_step_type.zwo
training_watt_lib/: __init__.py
training_watt_lib/calculate_metrics/: __init__.py  calculate_metrics.py
training_watt_lib/fit_file_parser/: fit_file_parser.py
