[project]
name = "power-metrics-lib"
version = "1.1.0"
description = "A project implementing a library to calculate the normalized power and other metrics from an activity or workout file."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "garmin-fit-sdk>=21.141.0",
    "pandas>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "deptry>=0.21.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "poethepoet>=0.30.0",
    "pygments>=2.18.0",
    "pyright>=1.1.388",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "xdoctest>=1.2.0",
]

[tool.ruff.lint]
select = ["ALL"]
# and then manually ignore annoying ones:
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101",   # asserts allowed in tests...
    "ANN401", # Any should be allowed
    #     "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    #     "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
"notebooks/**/*.ipynb" = [
    "E501", # longer lines is ok
    "T201", # print statements are allowed in notebooks
]
[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["power_metrics_lib"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.pyright]
venvPath = "." # rye installs the venv in the current dir
venv = ".venv" # in a folder called `.venv`

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src/power_metrics_lib"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.deptry]
ignore_notebooks = true
known_first_party = ["power_metrics_lib"]

[tool.poe.tasks]
format = "uv run ruff format"
lint = "uv run ruff check --fix"
pyright = "uv run pyright"
check-deps = "uv run deptry ."
tests = "uv run pytest -s --cov --cov-report=term-missing --cov-report=html:.htmlcov"
xdoctest = "uv run xdoctest --quiet -m src/power_metrics_lib"
serve-docs = "uv run mkdocs serve"
release = ["lint", "pyright", "check-deps", "tests", "xdoctest"]
